--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@material/button": "^0.26.0",
+    "angular2-fontawesome": "^0.9.3",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
