--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@material/button": "^0.26.0",
+    "@material/form-field": "^0.31.0",
     "@material/textfield": "^0.26.0",
     "angular2-fontawesome": "^0.9.3",
     "chart.js": "^2.7.1",
