--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
