--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@material/button": "^0.26.0",
+    "@material/dialog": "^0.35.0",
     "@material/form-field": "^0.31.0",
     "@material/textfield": "^0.26.0",
+    "@types/material__dialog": "^0.26.0",
     "angular2-fontawesome": "^0.9.3",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
