--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "html-form-send-email-via-google-script-without-server": "^2.1.0",
     "jquery": "^3.3.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
@@ -52,6 +53,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "live-server": "^1.2.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
