--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material/dialog": "^0.35.0",
     "@material/form-field": "^0.31.0",
     "@material/linear-progress": "^0.35.0",
+    "@material/ripple": "^0.35.0",
     "@material/textfield": "^0.26.0",
     "@types/material__dialog": "^0.26.0",
     "angular2-fontawesome": "^0.9.3",
